jellyfin/jellyfin-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.teklogi.systems`)
      kind: Rule
      services:
        - name: jellyfin
          port: 80
